--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-scroll": "^1.8.9",
+    "sharp": "^0.32.4",
     "standard": "^17.1.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
